--- a/Shopper/app/src/main/res/layout/activity_display_items.xml
+++ b/Shopper/app/src/main/res/layout/activity_display_items.xml
@@ -3,15 +3,13 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="erostamas.shopper.DisplayItemsActivity">
 
-    <Button
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Shoppings"
-        android:id="@+id/show_shoppings_btn"
+        android:id="@+id/items_list"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:onClick="onShowShoppingsButtonClicked" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
