--- a/Shopper/app/src/main/res/menu/menu_display_stores.xml
+++ b/Shopper/app/src/main/res/menu/menu_display_stores.xml
@@ -1,12 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="erostamas.shopper.DisplayItemsActivity">
+    tools:context="erostamas.shopper.DisplayStoresActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <!-- "Mark Favorite", should appear as action button if possible -->
     <item
-        android:id="@+id/add_item"
+        android:id="@+id/add_store"
         android:icon="@drawable/create_new"
         android:title="x"
         app:showAsAction="ifRoom"/>
+
 </menu>
